# event-attestator

./: .clippy.toml  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-cargo.sh  run-all-shell-tests.sh  test-ltc-compilation.sh
common/algorand/: Cargo.toml
common/algorand/src/: add_latest_algo_submission_material.rs  algo_chain_id.rs  algo_constants.rs  algo_database_transactions.rs  algo_db_utils.rs  algo_enclave_state.rs  algo_note_metadata.rs  algo_relevant_asset_txs.rs  algo_signed_group_txs.rs  algo_state.rs  algo_submission_material.rs  algo_user_data.rs  check_parent_exists.rs  check_submitted_block_is_subsequent.rs  get_candidate_block_hash.rs  lib.rs  maybe_update_latest_block_with_expired_participants.rs  remove_all_txs_from_submission_material_in_state.rs  remove_irrelevant_txs_from_submission_material_in_state.rs  remove_old_algo_tail_submission_material.rs  remove_txs_from_canon_submission_material.rs  update_algo_canon_block_hash.rs  update_algo_linker_hash.rs  update_algo_tail_block_hash.rs
common/bitcoin/: Cargo.toml
common/bitcoin/src/: add_btc_block_to_db.rs  btc_block.rs  btc_constants.rs  btc_database_utils.rs  btc_enclave_state.rs  btc_metadata.rs  btc_recipients_and_amounts.rs  btc_state.rs  btc_submission_material.rs  btc_transaction.rs  btc_types.rs  btc_utils.rs  check_btc_parent_exists.rs  deposit_address_info.rs  error.rs  extract_utxos_from_p2pkh_txs.rs  extract_utxos_from_p2sh_txs.rs  extract_utxos_from_txs.rs  filter_btc_txs.rs  filter_deposit_address_info_hash_map.rs  filter_p2pkh_deposit_txs.rs  filter_p2sh_deposit_txs.rs  filter_utxos.rs  get_btc_block_in_db_format.rs  get_deposit_info_hash_map.rs  lib.rs  remove_old_btc_tail_block.rs  remove_tx_infos_from_canon_block.rs  save_utxos_to_db.rs  set_btc_anchor_block_hash.rs  set_btc_canon_block_hash.rs  set_btc_latest_block_hash.rs  set_flags.rs  update_btc_canon_block_hash.rs  update_btc_latest_block_hash.rs  update_btc_linker_hash.rs  update_btc_tail_block_hash.rs  validate_btc_block_header.rs  validate_btc_difficulty.rs  validate_btc_merkle_root.rs  (+1 more)
common/chain_ids/: Cargo.toml
common/chain_ids/src/: algo_chain_id.rs  btc_chain_id.rs  chain_id_traits.rs  eos_chain_id.rs  eth_chain_id.rs  lib.rs
common/common/: Cargo.toml
common/common/src/: address.rs  block_already_in_db_error.rs  bridge_side.rs  constants.rs  core_type.rs  crypto_utils.rs  eos_chain_id.rs  eos_metadata.rs  errors.rs  eth_chain_id.rs  lib.rs  no_parent_error.rs  safe_addresses.rs  types.rs  utils.rs
common/database_utils/: Cargo.toml
common/database_utils/src/: database_utils.rs  lib.rs
common/debug_signers/: Cargo.toml
common/debug_signers/src/: debug_signatories.rs  debug_signatory.rs  debug_signature.rs  debug_signatures.rs  eip_712_signature_hash_generator.rs  get_debug_signature_info.rs  lib.rs  test_utils.rs  validate_debug_command_signature.rs
common/enclave_info/: Cargo.toml
common/enclave_info/src/: enclave_info.rs  lib.rs
common/eos/: Cargo.toml
common/eos/src/: add_schedule.rs  append_interim_block_ids.rs  disable_protocol_feature.rs  enable_protocol_feature.rs  eos_action_proofs.rs  eos_action_receipt.rs  eos_actions.rs  eos_block_header.rs  eos_constants.rs  eos_database_transactions.rs  eos_database_utils.rs  eos_enclave_state.rs  eos_extension.rs  eos_global_sequences.rs  eos_hash.rs  eos_incremerkle.rs  eos_merkle_proof.rs  eos_merkle_utils.rs  eos_producer_schedule.rs  eos_state.rs  eos_submission_material.rs  eos_types.rs  eos_unit_conversions.rs  eos_utils.rs  extract_utxos_from_btc_txs.rs  filter_action_proofs.rs  get_action_digest.rs  get_active_schedule.rs  get_enabled_protocol_features.rs  get_eos_incremerkle.rs  get_processed_actions_list.rs  increment_eos_account_nonce.rs  lib.rs  protocol_features.rs  save_incremerkle.rs  save_latest_block_id.rs  save_latest_block_num.rs  validate_producer_slot.rs  validate_signature.rs
common/ethereum/: Cargo.toml
common/ethereum/src/: add_block_and_receipts_to_db.rs  append_to_blockchain.rs  calculate_linker_hash.rs  check_parent_exists.rs  default_block_parameter.rs  eip_1559.rs  eip_4844.rs  eth_block.rs  eth_block_from_json_rpc.rs  eth_constants.rs  eth_database_transactions.rs  eth_database_utils.rs  eth_enclave_state.rs  eth_log.rs  eth_macros.rs  eth_message_signer.rs  eth_receipt.rs  eth_receipt_from_json_rpc.rs  eth_receipt_type.rs  eth_state.rs  eth_submission_material.rs  eth_traits.rs  eth_types.rs  eth_utils.rs  increment_eos_account_nonce.rs  increment_eth_account_nonce.rs  increment_evm_account_nonce.rs  increment_int_account_nonce.rs  lib.rs  remove_old_eth_tail_block.rs  remove_receipts_from_canon_block.rs  update_eth_canon_block_hash.rs  update_eth_linker_hash.rs  update_eth_tail_block_hash.rs  update_latest_block_hash.rs  validate_block_in_state.rs  validate_receipts_in_state.rs  vault_using_cores.rs
common/ethereum_debug/: Cargo.toml
common/ethereum_debug/src/: debug_gas_price_setters.rs  debug_nonce_setters.rs  debug_reset_eth_chain.rs  lib.rs
common/fees/: Cargo.toml
common/fees/src/: fee_constants.rs  fee_database_utils.rs  fee_enclave_state.rs  fee_utils.rs  fee_withdrawals.rs  lib.rs
common/file_logger/: Cargo.toml
common/file_logger/src/: file_logger.rs  lib.rs
common/jsonrpc_database/: Cargo.toml
common/jsonrpc_database/src/: errors.rs  json_rpc_database.rs  lib.rs
common/loggers/: Cargo.toml
common/loggers/src/: file_logger.rs  lib.rs
common/metadata/: Cargo.toml
common/metadata/src/: eos_metadata.rs  lib.rs  metadata_address.rs  metadata_chain_id.rs  (+6 more)
common/network_ids/: Cargo.toml
common/rocksdb_database/: Cargo.toml
common/safe_addresses/: Cargo.toml
common/sentinel/: Cargo.toml  README.md
v1_bridges/btc_on_eos/: Cargo.toml
v1_bridges/btc_on_eth/: Cargo.toml
v1_bridges/eos_on_eth/: Cargo.toml
v1_bridges/erc20_on_evm/: Cargo.toml
v2_bridges/btc_on_int/: Cargo.toml
v2_bridges/eos_on_int/: Cargo.toml
v2_bridges/int_on_algo/: Cargo.toml
v3_bridges/sentinel/: .gitignore  Cargo.toml  Config.toml  config.toml  test-delete-me.sh
(+3551 files in other folders)
