[workspace]
members = [
    "common/eos",
    "common/fees",
    "common/common",
    "common/bitcoin",
    "common/metadata",
    "common/algorand",
    "common/ethereum",
    "common/chain_ids",
    "common/file_logger",
    "common/enclave_info",
    "common/stderr_logger",
    "common/docopt_macros",
    "common/debug_signers",
    "common/database_utils",
    "common/safe_addresses",
    "common/ethereum_debug",
    "v2_bridges/btc_on_int",
    "v1_bridges/btc_on_eos",
    "v1_bridges/btc_on_eth",
    "v1_bridges/eos_on_eth",
    "v2_bridges/int_on_eos",
    "v2_bridges/int_on_evm",
    "v2_bridges/eos_on_int",
    "v2_bridges/int_on_algo",
    "common/jsonrpc_database",
    "common/rocksdb_database",
    "v1_bridges/erc20_on_evm",
    "v1_bridges/erc20_on_eos",
    "v2_bridges/erc20_on_int",
    "v2_bridges/vanilla_apps/pint-on-evm",
    "v1_bridges/vanilla_apps/pbtc-on-eos",
    "v1_bridges/vanilla_apps/pbtc-on-eth",
    "v1_bridges/vanilla_apps/peos-on-eth",
    "v2_bridges/vanilla_apps/pbtc-on-int",
    "v2_bridges/vanilla_apps/peos-on-int",
    "v2_bridges/vanilla_apps/pint-on-eos",
    "v2_bridges/vanilla_apps/pint-on-algo",
    "v2_bridges/vanilla_apps/perc20-on-int",
    "v1_bridges/vanilla_apps/perc20-on-eos",
    "v1_bridges/vanilla_apps/perc20-on-evm",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.dependencies]
hex = "0.4.3"
log = "0.4.14"
paste = "1.0.6"
strum = "0.22.0"
rmp-serde = "0.15.5"
lazy_static = "1.4.0"
serde_with = "1.11.0"
serde_json = "1.0.68"
serde_bytes = "0.11.6"
function_name = "0.3.0"
derive_more = "0.99.16"
strum_macros = "0.22.0"
ethereum-types = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
rust-algorand = { git = "https://github.com/provable-things/rust-algorand" }
