[workspace]
members = [
    "common/eos",
    "common/fees",
    "common/common",
    "common/bitcoin",
    "common/metadata",
    "common/algorand",
    "common/ethereum",
    "common/chain_ids",
    "common/file_logger",
    "common/enclave_info",
    "common/stderr_logger",
    "common/docopt_macros",
    "common/debug_signers",
    "common/database_utils",
    "common/safe_addresses",
    "common/ethereum_debug",
    "v2_bridges/btc_on_int",
    "v1_bridges/btc_on_eos",
    "v1_bridges/btc_on_eth",
    "v1_bridges/eos_on_eth",
    "v2_bridges/int_on_eos",
    "v2_bridges/int_on_evm",
    "v2_bridges/eos_on_int",
    "v2_bridges/int_on_algo",
    "common/jsonrpc_database",
    "common/rocksdb_database",
    "v1_bridges/erc20_on_evm",
    "v1_bridges/erc20_on_eos",
    "v2_bridges/erc20_on_int",
    "v2_bridges/vanilla_apps/pint-on-evm",
    "v1_bridges/vanilla_apps/pbtc-on-eos",
    "v1_bridges/vanilla_apps/pbtc-on-eth",
    "v1_bridges/vanilla_apps/peos-on-eth",
    "v2_bridges/vanilla_apps/pbtc-on-int",
    "v2_bridges/vanilla_apps/peos-on-int",
    "v2_bridges/vanilla_apps/pint-on-eos",
    "v2_bridges/vanilla_apps/pint-on-algo",
    "v2_bridges/vanilla_apps/perc20-on-int",
    "v1_bridges/vanilla_apps/perc20-on-eos",
    "v1_bridges/vanilla_apps/perc20-on-evm",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.dependencies]
hex = "0.4.3"
log = "0.4.14"
rlp = "0.5.1"
bs58 = "0.4.0"
rand = "0.8.4"
paste = "1.0.6"
docopt = "1.1.1"
strum = "0.22.0"
base64 = "0.13.0"
chrono = "0.4.19"
triehash = "0.8.4"
ethabi = "15.0.0"
byteorder = "1.4.3"
rustc-hex = "2.1.0"
simplelog = "0.10.2"
rmp-serde = "0.15.5"
lazy_static = "1.4.0"
quick-error = "2.0.1"
serde_with = "1.11.0"
serde_json = "1.0.68"
serde_bytes = "0.11.6"
function_name = "0.3.0"
simple_logger = "2.0.0"
derive_more = "0.99.16"
strum_macros = "0.22.0"
keccak-hasher = "0.15.3"
ethereum-types = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
eip-712 = { git = "https://github.com/paritytech/EIP-712", rev = "551dfd9" }
rust-algorand = { git = "https://github.com/provable-things/rust-algorand" }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", rev = "8e57843" }
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls","signing"] }
secp256k1 = { git = "https://github.com/bifrost-finance/rust-secp256k1", features = ["recovery", "rand-std"], rev = "9c756f7" }

common = { path = "./common/common" }
common_eos = { package = "eos", path = "./common/eos" }
common_eth = { package = "ethereum", path = "./common/ethereum" }
common_bitcoin = { package = "bitcoin", path = "./common/bitcoin" }
common_metadata = { package = "metadata", path = "./common/metadata" }
common_chain_ids = { package = "chain_ids", path = "./common/chain_ids" }
common_debug_signers = { package = "debug_signers", path = "./common/debug_signers" }
common_safe_addresses = { package = "safe_addresses", path = "./common/safe_addresses" }
