[workspace]
members = [
    "common/eos",
    "common/fees",
    "common/common",
    "common/bitcoin",
    "common/metadata",
    "common/algorand",
    "common/ethereum",
    "common/chain_ids",
    "common/file_logger",
    "v3_bridges/sentinel",
    "common/enclave_info",
    "common/stderr_logger",
    "common/docopt_macros",
    "common/debug_signers",
    "common/database_utils",
    "common/safe_addresses",
    "common/ethereum_debug",
    "v2_bridges/btc_on_int",
    "v1_bridges/btc_on_eos",
    "v1_bridges/btc_on_eth",
    "v1_bridges/eos_on_eth",
    "v2_bridges/int_on_eos",
    "v2_bridges/int_on_evm",
    "v2_bridges/eos_on_int",
    "v2_bridges/int_on_algo",
    "common/jsonrpc_database",
    "common/rocksdb_database",
    "v1_bridges/erc20_on_evm",
    "v1_bridges/erc20_on_eos",
    "v2_bridges/erc20_on_int",
    "v2_bridges/vanilla_apps/pint-on-evm",
    "v1_bridges/vanilla_apps/pbtc-on-eos",
    "v1_bridges/vanilla_apps/pbtc-on-eth",
    "v1_bridges/vanilla_apps/peos-on-eth",
    "v2_bridges/vanilla_apps/pbtc-on-int",
    "v2_bridges/vanilla_apps/peos-on-int",
    "v2_bridges/vanilla_apps/pint-on-eos",
    "v2_bridges/vanilla_apps/pint-on-algo",
    "v2_bridges/vanilla_apps/perc20-on-int",
    "v1_bridges/vanilla_apps/perc20-on-eos",
    "v1_bridges/vanilla_apps/perc20-on-evm",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.dependencies]
hex = "0.4.3"
log = "0.4.14"
rlp = "0.5.1"
warp = "0.3.3"
bs58 = "0.4.0"
rand = "0.8.4"
sha3 = "0.10.6"
paste = "1.0.6"
sha2 = "0.10.7"
docopt = "1.1.1"
strum = "0.22.0"
config = "0.13.3"
base64 = "0.21.2"
dotenv = "0.15.0"
chrono = "0.4.19"
anyhow = "1.0.69"
ethabi = "15.0.0"
triehash = "0.8.4"
rocksdb = "0.21.0"
headers = "0.3.8"
futures = "0.3.26"
byteorder = "1.4.3"
rustc-hex = "2.1.0"
simplelog = "0.10.2"
rmp-serde = "0.15.5"
stderrlog =  "0.5.1"
thiserror = "1.0.40"
lazy_static = "1.4.0"
quick-error = "2.0.1"
serde_json = "1.0.68"
ethers-core = "2.0.2"
serial_test = "0.6.0"
serde_bytes = "0.11.6"
futures-retry = "0.6.0"
function_name = "0.3.0"
simple_logger = "2.0.0"
derive_more = "0.99.16"
strum_macros = "0.24.3"
keccak-hasher = "0.15.3"
serde_derive = "1.0.152"
ethereum-types = "0.12.1"
bounded-vec-deque = "0.1.1"
tokio-tungstenite = "0.19.0"
tokio = { version = "1.25.0", features = [ "full" ] }
clap = { version = "4.1.6", features = [ "derive" ] }
serde = { version = "1.0.130", features = ["derive"] }
tower-http = { version = "0.4.3", features = [ "fs" ] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
axum = { version = "0.6.16", features = [ "ws", "headers" ] }
mongodb = { version = "2.4.0", features = ["tokio-runtime"] }
jsonrpsee = { version = "0.18.1", features = [ "ws-client" ]}
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
serde_with = { version = "1.11.0", features = ["hex", "base64"] }
eip-712 = { git = "https://github.com/paritytech/EIP-712", rev = "551dfd9" }
rust-algorand = { git = "https://github.com/provable-things/rust-algorand" }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", rev = "8e57843" }
flexi_logger = { version = "0.23.3", features = [ "compress", "use_chrono_for_offset" ] }
reqwest = { version = "0.11.4", features = ["blocking", "json"], default-features = false }
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls","signing"] }
secp256k1 = { git = "https://github.com/bifrost-finance/rust-secp256k1", features = ["recovery", "rand-std"], rev = "9c756f7" }
litecoin = { git = "https://github.com/provable-things/rust-bitcoin.git", package = "bitcoin", branch = "provable-ltc", features = ["serde", "rand"] }

common = { path = "./common/common" }
common_eos = { package = "eos", path = "./common/eos" }
common_fees = { package = "fees", path = "./common/fees" }
common_btc = { package = "bitcoin", path = "./common/bitcoin" }
common_eth = { package = "ethereum", path = "./common/ethereum" }
common_algo = { package = "algorand", path = "./common/algorand" }
common_metadata = { package = "metadata", path = "./common/metadata" }
common_chain_ids = { package = "chain_ids", path = "./common/chain_ids" }
common_file_logger = { package = "file_logger", path = "./common/file_logger" }
common_eth_debug = { package = "ethereum_debug", path = "./common/ethereum_debug"}
common_enclave_info = { package = "enclave_info", path = "./common/enclave_info" }
common_debug_signers = { package = "debug_signers", path = "./common/debug_signers" }
common_docopt_macros = { package = "docopt_macros", path = "./common/docopt_macros" }
common_stderr_logger = { package = "stderr_logger", path = "./common/stderr_logger" }
common_database_utils = { package = "database_utils", path = "./common/database_utils"}
common_safe_addresses = { package = "safe_addresses", path = "./common/safe_addresses" }
common_rocksdb_database = { package = "rocksdb_database", path = "./common/rocksdb_database" }
common_jsonrpc_database = { package = "jsonrpc_database", path = "./common/jsonrpc_database" }
