[package]
license = "MIT"
publish = false
edition = "2021"
name = "algorand"
version = "6.10.3"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }
rust-algorand = { workspace = true }

common = { path = "../common" }
common_eth = { package = "ethereum", path = "../ethereum" }
common_metadata = { package = "metadata", path = "../metadata" }
common_debug_signers = { package = "debug_signers", path = "../debug_signers" }
common_safe_addresses = { package = "safe_addresses", path = "../safe_addresses" }

[dev-dependencies]
simple_logger = "2.0.0"

[features]
# Disables block validation
non-validating = []

[lib]
doctest = false
