[package]
license = "MIT"
publish = false
edition = "2021"
name = "algorand"
version = "6.12.1"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
# Disables block validation
non-validating = []

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }
rust-algorand = { workspace = true }

common = { workspace = true }
common_eth = { workspace = true }
common_metadata = { workspace = true }
common_debug_signers = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
simple_logger = { workspace = true }

[lib]
doctest = false
