[package]
license = "MIT"
publish = false
name = "bitcoin"
edition = "2021"
version = "6.10.3"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }

common = { path = "../common" }
common_metadata = { package = "metadata", path = "../metadata" }
common_chain_ids = { package = "chain_ids", path = "../chain_ids" }
common_debug_signers = { package = "debug_signers", path = "../debug_signers" }
common_safe_addresses = { package = "safe_addresses", path = "../safe_addresses" }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
