[package]
license = "MIT"
publish = false
name = "bitcoin"
edition = "2021"
version = "6.10.3"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_metadata = { workspace = true }
common_chain_ids = { workspace = true }
common_debug_signers = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
