[package]
license = "MIT"
publish = false
edition = "2021"
name = "chain_ids"
version = "1.1.0"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
strum_macros = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }

[dev-dependencies]
serial_test = "0.6.0"
simple_logger = "2.0.0"

[lib]
doctest = false
