[package]
license = "MIT"
publish = false
edition = "2021"
name = "chain_ids"
version = "1.2.0"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
# NOTE: This feature was required for v3 dao messages to be passed accross chain correctly, which message
# require a higher gas limit stipend. This higher limit may eventually be present by default, but for now
# its feature gated
include-origin-tx-details = []

[dependencies]
hex = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
derive_more = { workspace = true }
lazy_static = { workspace = true }
strum_macros = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }

[dev-dependencies]
serial_test = "0.6.0"
simple_logger = "2.0.0"

[lib]
doctest = false
