[package]
name = "common"
license = "MIT"
publish = false
edition = "2021"
version = "6.11.0"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
rlp = { workspace = true }
rand = { workspace = true }
web3 = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
docopt = { workspace = true }
chrono = { workspace = true }
ethabi = { workspace = true }
bitcoin = { workspace = true }
eip-712 = { workspace = true }
litecoin = { workspace = true }
eos-chain = { workspace = true }
secp256k1 = { workspace = true }
rustc-hex = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
quick-error = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
strum_macros = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

[dev-dependencies]
serial_test = "0.6.0"
simple_logger = "2.0.0"

[lib]
doctest = false
