[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.0"
readme = "README.md"
rust-version = "1.56"
name = "database_utils"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
serde_json = "1.0.68"
function_name = "0.3.0"
debug_signers = { path = "../debug_signers" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

common = { path = "../common" }
common_eos = { package = "eos", path = "../eos" }

[dev-dependencies]
simple_logger = "2.0.0"
