[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.3"
readme = "README.md"
rust-version = "1.56"
name = "database_utils"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }

common = { workspace = true }
common_eos = {  workspace = true }
common_debug_signers = { workspace = true }

[lib]
doctest = false
