[package]
license = "MIT"
publish = false
edition = "2021"
version = "6.10.2"
readme = "README.md"
rust-version = "1.56"
name = "debug_signers"
keywords = ["defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
# NOTE: This disables the use of a hard-coded address being used to validate a command that adds a FIRST debug signer.
# This means that any address(es) can be added as the FIRST debug signer(s) without requiring validation.
no-safe-debug-signers = []

[dependencies]
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
eip-712 = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_eth = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
