[package]
license = "MIT"
publish = false
edition = "2021"
version = "6.10.3"
readme = "README.md"
name = "enclave_info"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

common = { workspace = true }
common_debug_signers = { workspace = true }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
