[package]
name = "eos"
license = "MIT"
publish = false
edition = "2021"
version = "6.11.0"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
paste = "1.0.6"
chrono = "0.4.19"
rustc-hex = "2.1.0"
serde_json = "1.0.68"
lazy_static = "1.4.0"
function_name = "0.3.0"
derive_more = "0.99.16"
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos", rev = "8e57843" }
secp256k1 = { git = "https://github.com/bifrost-finance/rust-secp256k1", features = ["recovery", "rand-std"], rev = "9c756f7" }

common = { path = "../common" }
common_chain_ids = { package = "chain_ids", path = "../chain_ids" }
common_debug_signers = { package = "debug_signers", path = "../debug_signers" }
common_safe_addresses = { package = "safe_addresses", path = "../safe_addresses" }

[dev-dependencies]
bs58 = "0.4.0"
simple_logger = "2.0.0"

[lib]
doctest = false
