[package]
name = "eos"
license = "MIT"
publish = false
edition = "2021"
version = "6.11.1"
readme = "README.md"
rust-version = "1.56"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
ltc = ["litecoin"]
non-validating = []
default = ["bitcoin"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rustc-hex = { workspace = true }
eos-chain = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
bitcoin = { workspace = true, optional = true }
litecoin = { workspace = true, optional = true }

common = { workspace = true }
common_chain_ids = { workspace = true }
common_debug_signers = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
simple_logger = { workspace = true }

[lib]
doctest = false
