[package]
license = "MIT"
publish = false
edition = "2021"
name = "ethereum"
version = "6.10.3"
readme = "README.md"
rust-version = "1.56"
keywords = ["defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
rlp = "0.5.1"
rand = "0.8.4"
paste = "1.0.6"
strum = "0.22.0"
ethabi = "15.0.0"
triehash = "0.8.4"
serde_json = "1.0.68"
lazy_static = "1.4.0"
strum_macros = "0.22.0"
derive_more = "0.99.16"
keccak-hasher = "0.15.3"
ethereum-types = "0.12.1"
rust-algorand = { workspace = true }
serde = { version = "1.0.130", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls","signing"] }
secp256k1 = { git = "https://github.com/bifrost-finance/rust-secp256k1", features = ["recovery", "rand-std"], rev = "9c756f7" }

common = { path = "../common" }
common_metadata = { package = "metadata", path = "../metadata" }
common_chain_ids = { package = "chain_ids", path = "../chain_ids" }
common_safe_addresses = { package = "safe_addresses", path = "../safe_addresses" }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
