[package]
license = "MIT"
publish = false
edition = "2021"
name = "ethereum"
version = "6.11.1"
readme = "README.md"
rust-version = "1.56"
keywords = ["defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
non-validating = []

[dependencies]
hex = { workspace = true }
log = { workspace = true }
rlp = { workspace = true }
rand = { workspace = true }
web3 = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
triehash = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
tiny-keccak = { workspace = true }
derive_more = { workspace = true }
strum_macros = { workspace = true }
keccak-hasher = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_metadata = { workspace = true }
common_chain_ids = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
simple_logger = { workspace = true }

[lib]
doctest = false
