[package]
license = "MIT"
publish = false
edition = "2021"
version = "6.10.2"
readme = "README.md"
rust-version = "1.56"
name = "ethereum_debug"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
function_name = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_eth = { workspace = true }
common_debug_signers = { workspace = true }

[dev-dependencies]
simple_logger = { workspace = true }

[lib]
doctest = false
