[package]
name = "fees"
license = "MIT"
publish = false
edition = "2021"
version = "6.10.1"
readme = "README.md"
rust-version = "1.56"
keywords = ["defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
serde_json = "1.0.68"
lazy_static = "1.4.0"
derive_more = "0.99.16"
serde = { version = "1.0.130", features = ["derive"] }
bitcoin = { version = "0.29.2", features = ["serde", "rand"] }

common = { path = "../common" }
common_btc = { package = "bitcoin", path = "../bitcoin" }

[dev-dependencies]
simple_logger = "2.0.0"

[lib]
doctest = false
