[package]
edition = "2021"
version = "1.0.0"
name = "file_logger"
rust-version = "1.56"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
log = "0.4.14"
quick-error = "2.0.1"
lazy_static = "1.4.0"
common = { package = "common", path = "../common" }
# NOTE: We need to use this chrono feature, see here:
# https://docs.rs/flexi_logger/latest/flexi_logger/error_info/index.html#time
flexi_logger = { version = "0.23.3", features = [ "compress", "use_chrono_for_offset" ] }

[lib]
doctest = false
