[package]
edition = "2021"
version = "1.0.2"
name = "file_logger"
rust-version = "1.56"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
log = { workspace = true }
quick-error = { workspace = true }
lazy_static = { workspace = true }
flexi_logger = { workspace = true }

common = { workspace = true }

[lib]
doctest = false
