[package]
edition = "2021"
version = "1.0.0"
rust-version = "1.56"
name = "jsonrpc_database"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
log = "0.4.14"
hex = "0.4.3"
quick-error = "2.0.1"
serde_json = "1.0.82"
common = { package = "common", path = "../common" }
reqwest = { version = "0.11.4", features = ["blocking", "json"], default-features = false }


[dev-dependencies]
serial_test = "0.5.1"
simple_logger = "1.13.0"
