[package]
edition = "2021"
version = "1.0.1"
rust-version = "1.56"
name = "jsonrpc_database"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
log = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
quick-error = { workspace = true }

common = { workspace = true }

[lib]
doctest = false
