[package]
name = "loggers"
edition = "2021"
version = "1.0.0"
rust-version = "1.56"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[features]
default = ["file-logger"]
file-logger = ["lazy_static"]
std-err-logger = ["stderrlog"]

[dependencies]
log = "0.4.14"
simplelog = "0.12.0"
quick-error = "2.0.1"
common = { package = "common", path = "../common" }
stderrlog = { version = "0.5.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
# NOTE: We need to use this chrono feature, see here:
# https://docs.rs/flexi_logger/latest/flexi_logger/error_info/index.html#time
flexi_logger = { version = "0.23.3", features = [ "compress", "use_chrono_for_offset" ] }
