[package]
license = "MIT"
publish = false
edition = "2021"
name = "metadata"
version = "6.10.3"
readme = "README.md"
rust-version = "1.56"
keywords = ["defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
bitcoin = { workspace = true }
eos-chain = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
derive_more = { workspace = true }
strum_macros = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }
common_chain_ids = { workspace = true }
common_safe_addresses = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
simple_logger = { workspace = true }

[lib]
doctest = false
