[package]
edition = "2021"
version = "1.0.1"
rust-version = "1.56"
name = "rocksdb_database"
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
hex = { workspace = true }
log = { workspace = true }
rocksdb = { workspace = true }
quick-error = { workspace = true }

common = { workspace = true }

[lib]
doctest = false
