[package]
license = "MIT"
publish = false
edition = "2021"
version = "1.0.2"
readme = "README.md"
rust-version = "1.56"
name = "safe_addresses"
keywords = ["provable", "defi", "crypto"]
authors = ["Greg Kapka <gregkapka@gmail.com>"]

[dependencies]
log = { workspace = true }
bitcoin = { workspace = true }
eos-chain = { workspace = true }
lazy_static = { workspace = true }
rust-algorand = { workspace = true }
ethereum-types = { workspace = true }

common = { workspace = true }

[lib]
doctest = false
